# libmhash

./: .gitignore  Makefile.am  README.md  configure.ac  configure.in
doc/: .gitignore  Makefile.am  mhash.pod
include/: Makefile.am
include/mutils/: .gitignore  mutils.h
lib/: Makefile.am  mhash.c  snefru.c  stdfns.c  tiger.c  whirlpool.c
src/: .gitignore  Makefile.am  hmac_test.c
